# oasis

./: .coveragerc  .pre-commit-config.yaml  MANIFEST.in  README.md  conftest.py  noxfile.py  pyproject.toml  requirements.txt  tests.py  tox.ini
django_oasis/: __init__.py  core.py  docs.py  input.py  output.py  processors.py  settings.py
django_oasis/templates/: swagger-ui.html
docs/: conf.py  customize_processors.rst  index.rst
docs/_ext/: pyproject.toml  setting.py
docs/_ext/swaggerui/: __init__.py
docs/_ext/swaggerui/validate_oas/: __init__.py
docs/_samples/: .isort.cfg
docs/_samples/customize_processors/: urls.py
docs/_samples/flask/input_body/: app.py  (+3 more)
docs/_samples/input_body/: tests.py  views.py
docs/_samples/input_cookie/: tests.py  urls.py
docs/_samples/input_header/: tests.py  views.py
docs/_samples/input_path/: tests.py  views.py
docs/_samples/input_query/: views.py
docs/_samples/responses_on_dispatch/: tests.py  views.py
docs/_samples/restful/: tests.py  urls.py
docs/django/: customize_processors.rst  settings.rst
docs/django/examples/: restful.rst
docs/django/input/: body.rst  cookie.rst  header.rst  path.rst  query.rst
docs/django/output/: on_dispatch.rst
docs/examples/: restful.rst
docs/flask/examples/: restful.rst
docs/flask/input/: body.rst  cookie.rst  header.rst  path.rst  query.rst
docs/input/: body.rst  cookie.rst  header.rst  index.rst  path.rst  query.rst
docs/output/: index.rst  on_dispatch.rst
docs/starlette/examples/: restful.rst
requirements/: doc.txt  test.txt
shared/oasis_shared/: __init__.py
(+22 files in other folders)
